# netwatch

./: .gitignore  LICENSE  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 24a9712e4fe1_initial_migration_create_posts_table.py
src/netwatch/: __init__.py  config.py  main.py
src/netwatch/database/: __init__.py  connection.py  models.py
src/netwatch/provider/: base.py  facebook.py  rss.py
