[project]
name = "netwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Itzik Koyfman", email = "itzik@koyfman.net" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
netwatch = "netwatch.main:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
