[project]
name = "netwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Itzik Koyfman", email = "itzik@koyfman.net" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
]

[project.scripts]
netwatch = "netwatch.main:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff.lint]
select = ["F", "I", "UP", "A", "C4"]
